<resources>
    <string name="app_name">OrderUs</string>
    <string name="Msg1">Name : The Galadari Hotel</string>
    <string name="Msg2">Address : 64 Lotus Rd, Colombo 00100</string>
    <string name="Msg3">Phone 0112544544</string>
    <string name="Msg4">Email : info@galadarihotel.lk</string>
    <string name="Msg5">Owner/Contact Person : 0717892357</string>
    <string name="Msg6">Address : 87 New Galle Rd,Colombo 03</string>
    <string name="Msg7">Phone : 0112652231</string>
    <string name="Msg8">Email : info@galadarilite.lk</string>
    <string name="Msg9">Owner/ Contact Person : 0777548936</string>


    <string name="insert_details">Insert Room Details</string>
    <string name="existing_rooms">Existing Rooms</string>
    <string name="room_type">Room Type:</string>
    <string name="no_of_rooms">No of Rooms:</string>
    <string name="room_price">Room Price:</string>
    <string name="room_type_double_room">Double Room</string>
    <string name="no_of_rooms_20_rooms">20 Rooms</string>
    <string name="price_rs.20000">RS.20,000</string>
    <string name="rooms">Rooms</string>
    <string name="room_type_queen_room">Queen Room</string>
    <string name="no_of_rooms_10_rooms">10 Rooms</string>
    <string name="price_rs.30000">RS.30,000</string>
    <string name="title_activity_existing_rooms">ScrollingActivity</string>


    <string name="Topic1">Special Categories</string>
    <string name="Special1">Sri Lankan</string>
    <string name="Topic2">Top Categories</string>
    <string name="Topic3">More Categories</string>
    <string name="Topic4">Recipe Card</string>
    <string name="Topic5">European</string>
    <string name="Topic6">Indian</string>
    <string name="Topic7">Indonesian</string>
    <string name="Topic8">Chinese</string>
    <string name="Topic9">Russian</string>
    <string name="More1">Desserts</string>
    <string name="More2">Fast Foods</string>
    <string name="More3">Drinks and Smoothies</string>
    <string name="More4">Pizza</string>
    <string name="More5">Grocery</string>
    <string name="More6">Bakery</string>
    <string name="Top1">Chicken Rice</string>
    <string name="Top2">Sea Foods</string>
    <string name="Top3">Vegetarian</string>
    <string name="Top4">Rice and Curry</string>
    <string name="Top5">Fried Rice</string>
    <string name="Top6">Biriyani</string>
    <string name="Button">Next</string>
    <string name="title">Title</string>
    <string name="item_ID">Item ID</string>
    <string name="hintTitle">Enter Title</string>
    <string name="hintAuthor">Enter Author</string>
    <string name="hintPrice">Enter Price</string>
    <string name="hintServings">Enter Servings</string>
    <string name="hintPreparation">Enter Preparation Time</string>
    <string name="hintCooktime">Enter Cook Time</string>
    <string name="hintTotaltime">Enter Total Time</string>
    <string name="Addbtn">ADD RECEIPE</string>
    <string name="Showbtn">Show Data</string>
    <string name="Deletebtn">DELETE RECIPE</string>
    <string name="Editbtn">EDIT DETAILS</string>
    <string name="topic4">Food Summary</string>
    <string name="maintopic">Main Menu</string>
    <string name="buttonAddfood">ADD FOODS</string>
    <string name="buttoneditfood">EDIT FOODS</string>
    <string name="buttonmyfood">MY FOODS</string>
    <string name="menufood">Food Menu</string>
    <string name="addbtn">ADD DATA</string>
    <string name="topicnew">Food Details</string>
    <string name="submitdata">SUBMIT</string>
    <string name="detailssave">SAVE DETAILS</string>
    <string name="topic15">EDIT FOOD DETAILS</string>
    <string name="updatefooddata">EDIT FOOD DETAILS</string>
    <string name="but20">SAVE CHANGES</string>
    <string name="btnupdate">UPDATE DETAILS</string>
    <string name="btneditdata">EDIT DATA</string>
    <string name="btnsavedata">SAVE DATA</string>
    <string name="btnupdatedata">UPDATE DATA</string>
    <string name="btndeletedata">DELETE DATA</string>
    <string name="btnsavedetails">SAVE DATA</string>
    <string name="btndeletedetails">DELETE DATA</string>
    <string name="type2">Chicken Biriyani</string>

    <string name="type1">Chicken Fried Rice</string>
    <string name="price1">Rs.240</string>
    <string name="price2">Rs.320</string>
    <string name="authortype">Chinese Dragon Cafe</string>
    <string name="price3">Rs.350</string>

    <string name="type3">Prawn Fried Rice</string>
    <string name="type4">Chicken Fried Rice</string>
    <string name="price5">Rs.260</string>
    <string name="headertop">Top Categories</string>
    <string name="headertop1">Select User Type</string>
    <string name="btnsoldout">SOLD OUT</string>
    <string name="btnorder1">ORDER NOW</string>
    <string name="btnorder2">ORDER NOW</string>
    <string name="Etiteamno">Enter Food ID</string>
    <string name="EtTitle">Enter Food Title</string>
    <string name="EtAuthor">Enter Food Author</string>
    <string name="details1">page4btn1</string>
    <string name="updatedata1">Enter Food ID</string>
    <string name="updatedata2">Enter Food Title</string>
    <string name="updatedata3">Enter Food Price</string>
    <string name="updatedata4">Enter Food Author</string>
    <string name="updatedata5">Enter Preparation Time</string>
    <string name="updatedata6">Enter Cook Time</string>
    <string name="updatedata7">Enter Total Time</string>
    <string name="usefordisplay">usefordisplay</string>
    <string name="Deletefoodbtn">DELETE FOODS</string>
    <string name="domore">TODO</string>
    <string name="todomoree">TODO</string>
    <string name="todisplayy">TODO</string>
    <string name="buttondelete">DELETE DATA</string>
    <string name="deletefoodid">Enter Food ID</string>
    <string name="Deletetext">Delete Food Details</string>
    <string name="btnfoodlist">VIEW FOOD LIST</string>
    <string name="appname">OrderUs</string>
    <string name="foodhome">Food home</string>
    <string name="orderfoods">ORDER FOODS</string>
    <string name="todisplay">TODO</string>
    <string name="fordisplay">TODO</string>
    <string name="topiceditfooddata">Edit Food Details</string>
    <string name="displaypurpose">TODO</string>
    <string name="todisplaypic">TODO</string>
    <string name="displaypic">TODO</string>
    <string name="EtTitleNew">Enter Food Name</string>
    <string name="EtAuthornew">Enter Food Owner</string>
    <string name="updatedata2new">Enter Food Name</string>
    <string name="btnupdatenew">UPDATE</string>
    <string name="btndeletenew">DELETE</string>
    <string name="retrievehint1">Food ID</string>
    <string name="retrievehint2">Food Name</string>
    <string name="retrievehint3">Food price</string>
    <string name="retrievehint4">Food Owner</string>
    <string name="retrievehint5">Preparation Time</string>
    <string name="retrievehint6">Cook Time</string>
    <string name="retrievehint7">Total time</string>
    <string name="updatedata4new">Enter Food Owner</string>


    <string name="pay_method">Payment Method</string>
    <string name="card_Number">CARD NUMBER</string>
    <string name="card_box"></string>
    <string name="expiryDate">Expiry Date</string>
    <string name="expiryDateBox"></string>
    <string name="cvv">CVV</string>
    <string name="cvvBox"></string>
    <string name="CardHolder">CARD HOLDER NAME</string>
    <string name="cardHolderBoxName"></string>
    <string name="PAY">PAY</string>
    <string name="Verification">Payment</string>
    <string name="OTP_Guide">The one time 6 digit password has been sent to your mobile number71*******77. Please enter the code below to pay.</string>
    <string name="Enter_otp">ENTER CODE </string>

    <string name="ViewPay">View</string>
    <string name="Payment_Acknowledge">Payment Acknowledgement</string>
    <string name="Payment">Payment Success</string>
    <string name="Paid_Amount"> Paid Amount:</string>
    <string name="Amount_Space"></string>
    <string name="Acknowledge_message">Your Payment has been processed successfully</string>
    <string name="Resturant_Name">Indian Summer Resturant</string>
    <string name="Resturant_Location">Colombo</string>
    <string name="Resturant_Contact">771236758</string>
    <string name="Resturant_Description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus, nulla ut commodo sagittis, sapien dui mattis dui, non pulvinar lorem felis nec erat</string>
    <string name="Item1">Iteam 1</string>
    <string name="Item2"> Item 2</string>
    <string name="Item3"> Item 3</string>

    <string name="Amt_for_item1">xxx</string>
    <string name="Amt_for_item2">xxx</string>
    <string name="Amt_for_item3">xxx</string>

    <string name="Total_amt">Total Amount</string>
    <string name="Discount">Discount</string>
    <string name="GrandTotal1">Grand Total</string>

    <string name="Continue_shopping">Continue Shooping</string>
    <string name="Pay_for_cart">Check Out</string>

    <string name="add_cart">+</string>
    <string name="edit_cart">-</string>
    <string name="NoOfItems">1</string>

    <string name="NumOfOrder">6</string>


    <string name="TotNumOrder">4</string>
    <string name="DeletePay">Delete</string>
    <string name="btnUpdate">Update</string>
    <string name="invalid_number">please enter card number</string>
    <string name="paymenttopic">PAYMENT</string>
    <string name="etInputDatenew">Expiry Date</string>
    <string name="textView4">Payment Details</string>
    <string name="exdate">Expiry Date</string>
    <string name="exdatenew">EXPIRY DATE</string>
    <string name="chn">CARD HOLDERS NAME</string>
    <string name="Todisplay">TODO</string>
    <string name="textviewneww">Payment Details</string>
    <string name="textView2new">Select your choice..</string>
    <string name="Myfoodbtnnew">"SEARCH FOODS "</string>


</resources>