<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0C0C0"
    tools:context=".shoppingCart">

    <EditText
        android:id="@+id/editTextNumber5"
        android:layout_width="50dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/NoOfItems"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="354dp"
        tools:layout_editor_absoluteY="242dp" />

    <EditText
        android:id="@+id/editTextNumber6"
        android:layout_width="50dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/NoOfItems"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="354dp"
        tools:layout_editor_absoluteY="326dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="65dp"
        android:layout_height="59dp"
        android:text="@string/edit_cart"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="269dp"
        tools:layout_editor_absoluteY="227dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="61dp"
        android:layout_height="56dp"
        android:text="@string/add_cart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="433dp"
        tools:layout_editor_absoluteY="314dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:text="@string/edit_cart"
        android:textColor="?android:attr/colorMultiSelectHighlight"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="274dp"
        tools:layout_editor_absoluteY="124dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:text="@string/add_cart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="432dp"
        tools:layout_editor_absoluteY="225dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="560dp"
        android:layout_height="119dp"
        android:background="#5F8CF5"
        tools:layout_editor_absoluteX="-5dp"
        tools:layout_editor_absoluteY="-4dp" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="126dp"
        android:layout_height="38dp"
        android:ems="10"
        android:hint="@string/Item1"
        android:inputType="@string/Amt_for_item1"
        android:text="@string/Amt_for_item1"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="153dp" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="133dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/Item2"
        android:inputType="textPersonName"
        android:text="@string/Amt_for_item2"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="237dp" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="168dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/Item3"
        android:inputType="textPersonName"
        android:text="@string/Amt_for_item3"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="339dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Total_amt"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="442dp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Discount"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="522dp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GrandTotal1"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="605dp" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="223dp"
        tools:layout_editor_absoluteY="442dp" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="222dp"
        tools:layout_editor_absoluteY="509dp" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="223dp"
        tools:layout_editor_absoluteY="592dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="141dp"
        android:layout_height="82dp"
        android:text="@string/Continue_shopping"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="730dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pay_for_cart"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="746dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="62dp"
        android:layout_height="58dp"
        android:background="#938F8F"
        android:text="@string/add_cart"
        android:textColor="@color/design_default_color_primary_variant"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="433dp"
        tools:layout_editor_absoluteY="124dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="61dp"
        android:layout_height="50dp"
        android:text="@string/edit_cart"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="274dp"
        tools:layout_editor_absoluteY="320dp" />

    <EditText
        android:id="@+id/editTextNumber4"
        android:layout_width="50dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/NoOfItems"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="354dp"
        tools:layout_editor_absoluteY="124dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CART DETAILS"
        android:textSize="36sp"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="35dp" />

</androidx.constraintlayout.widget.ConstraintLayout>