<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/type1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".SearchFoodPage">


    <TextView
        android:id="@+id/price2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="264dp"
        android:layout_marginTop="444dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="255dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/price2"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/type3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="633dp"
        android:layout_marginEnd="187dp"
        android:layout_marginBottom="66dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/type3"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="264dp"
        android:layout_marginTop="633dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="66dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/price3"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="276dp"
        android:layout_height="158dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="286dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="287dp"
        android:contentDescription="@string/displaypurpose"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/biriyani" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="308dp"
        android:layout_height="137dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="485dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="109dp"
        android:contentDescription="@string/todisplaypic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/seafoods" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="282dp"
        android:layout_height="169dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="489dp"
        android:contentDescription="@string/displaypic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chicken" />

    <TextView
        android:id="@+id/type2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="444dp"
        android:layout_marginEnd="187dp"
        android:layout_marginBottom="255dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/type2"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/type4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="242dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="457dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/type4"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="269dp"
        android:layout_marginTop="242dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="457dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/price5"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headertop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="651dp"
        android:fontFamily="cursive"
        android:text="@string/headertop"
        android:textColor="@android:color/black"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnsoldout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="245dp"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="498dp"
        android:background="#FF0000"
        android:text="@string/btnsoldout"
        android:textColor="?android:attr/colorLongPressedHighlight"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnorder1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginTop="386dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="297dp"
        android:background="#008000"
        android:text="@string/btnorder1"
        android:textColor="?android:attr/colorForegroundInverse"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnorder2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="232dp"
        android:layout_marginTop="567dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="116dp"
        android:background="#008000"
        android:text="@string/btnorder2"
        android:textColor="?android:attr/colorForegroundInverse"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>