<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/themee"
    tools:context=".PaymentAcknowledge">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Payment_Acknowledge"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="45dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="245dp"
        android:layout_height="220dp"
        app:srcCompat="@drawable/sucess"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="111dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Payment"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="372dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Paid_Amount"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="454dp" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="165dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="numberDecimal"
        tools:layout_editor_absoluteX="219dp"
        tools:layout_editor_absoluteY="454dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Acknowledge_message"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="565dp" />
</androidx.constraintlayout.widget.ConstraintLayout>